Resolve FindBugs and PMB issues. Fix text input dialog.